--- a/package.json
+++ b/package.json
@@ -68,10 +68,7 @@
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.3.7",
     "cross-env": "^7.0.3",
-    "gh-pages": "^3.2.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3"
+    "gh-pages": "^3.2.3"
   },
   "peerDependencies": {
     "react": "^17.0.2",
